<?xml version="1.0"?>
<package format="2">
  <name>number_square_service</name>
  <version>0.0.0</version>
  <description>A ROS2 package for calculating the square of a number</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>